v.1.1 Ph.numbers list is added instead of single last number in ph.number entry form. New number is unconditionally added now through Account Manager (not trying to replace existing ph.number).

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/login_phoneicon_horiz_margin"
             android:src="@drawable/ic_phone"/>
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/etPhoneNumber"
             android:layout_toRightOf="@id/ivPhoneIcon"
             android:layout_marginLeft="@dimen/login_phonenumber_horiz_margin"
